@@ -7,6 +7,7 @@
 	    "findNext:",
 	    "findPrevious:",
 	    "findShowPanel:",
+	    "openGoToLinePanel:",
 	    "newAction:"
 	);
 	Super = NSObject;
